Update to fix css scrollbar styling

--- a/react-client/src/components/ActiveCharacters/ActiveCharacterList.css
+++ b/react-client/src/components/ActiveCharacters/ActiveCharacterList.css
@@ -1,8 +1,16 @@
 .active-character-list-wrapper {
-    padding: 0px 20px;
+    padding: 0px 1px;
+}
+
+.active-character-list-wrapper-spacing {
+    padding: 0px 10px;
+}
+
+.encounter-character-list-wrapper {
+    max-height: 70vh;
+    overflow: auto;
 }
 
 .encounter-character-list {
-    max-height: 70vh;
-    overflow: auto;
+    padding: 0px 20px;
 }
